@@ -35,13 +35,7 @@
 
 #include <cwidget/generic/util/transcode.h>
 
-#ifdef HAVE_EPT_AXI
-#include <ept/axi/axi.h>
-#else
-#error "Don't know how to use the debtags Xapian database."
-#endif
-
-#include <xapian/enquire.h>
+#include <xapian.h>
 
 #include <algorithm>
 
@@ -49,6 +43,7 @@
 #include <boost/unordered_map.hpp>
 
 #include "serialize.h"
+#include "../config_signal.h"
 
 using aptitude::util::progress_info;
 using boost::unordered_map;
@@ -61,7 +56,6 @@ namespace aptitude
   {
     namespace
     {
-#ifdef HAVE_EPT_AXI
       typedef Xapian::Database debtags_db;
 
       Xapian::docid get_docid_by_name(const debtags_db &db,
@@ -81,7 +75,6 @@ namespace aptitude
       {
         return db;
       }
-#endif
 
       /** \brief Evaluate any regular expression-based pattern.
        *
@@ -388,11 +381,10 @@ namespace aptitude
       {
 	try
 	  {
-#ifdef HAVE_EPT_AXI
-            db.reset(new Xapian::Database(ept::axi::path_db()));
-#else
-#error "Can't figure out how to create the debtags database."
-#endif
+            const std::string filename =
+              aptcfg->FindFile("Apt-Xapian-Index::Index",
+                               "/var/lib/apt-xapian-index/index");
+            db.reset(new Xapian::Database(filename));
 	  }
 	catch(...)
 	  {
