@@ -7,6 +7,9 @@ Version 0.6.11
 
 - Internal changes:
 
+  * Access apt-xapian-index directly.  Index path can be configured by
+    setting Apt-Xapian-Index::Index in apt.conf(5).
+
 - Documentation:
 
 - Translation updates:
